// ****************************************************************************
//
// This file is part of a MASA library or program.
// Refer to the included end-user license agreement for restrictions.
//
// Copyright (c) 2013 MASA Group
//
// ****************************************************************************

// Craft various messages suffixed with *2 to be deserialized as their
// *1 counterparts. The root messages should reference all these
// messages, using the same ordinals for each pair.
package testproto;

enum EnumNewValue1 {
    value10 = 0;
}

message EnumNewValue1Msg {
    required EnumNewValue1 value = 1;
}

enum EnumNewValue2 {
    value20 = 0;
    value21 = 1;
}

message EnumNewValue2Msg {
    required EnumNewValue2 value = 1;
}

message Root1 {
    optional EnumNewValue1Msg enum_new_value1_msg = 1;
}

message Root2 {
    optional EnumNewValue2Msg enum_new_value2_msg = 1;
}
